# openai-assistants-link

./: LICENSE.md  README.md  pyproject.toml  railway.json  requirements.txt
app/: health.py  main.py  routers.py
app/core/: main.py
app/core/api/: analytics.py  assistant_categories.py  assistant_datasources.py  assistants.py  categories.py  datasources.py
app/core/models/: assistants.py
app/lib/: lifespan.py  logging.py  middleware.py  prisma.py  servers.py
app/lib/llms/: chat_completion.py  classification.py
app/lib/models/: assistant.py  assistant_datasource.py  category.py  category_topic.py  chat.py  conversations.py  datasource.py  evaluations.py  response.py  topic.py
app/lib/openai/: __init__.py  formatting.py  openai_annotations.py  openai_assistant.py  openai_run.py  openai_thread.py  openai_tool.py  utils.py
app/lib/services/: analytics.py  chat.py  conversations.py  evaluations.py  topic.py
app/lib/services/database/: assistant_category_db.py  category_db.py  category_topic_db.py  conversation_db.py  topic_db.py
prisma/: schema.prisma
public/sample_docs/: Mega_Corporation_Benefits_Guide.txt  Speak_Low_Customer_Complaint_Response_Guidelines.docx  customer_spending_habits.csv
