[tool.poetry]
name = "openai-assistants-link"
version = "0.1.0"
description = ""
authors = ["Noa Gosselin <noa.gosselin@ribpay.app>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.30.1"
fastapi = "^0.111.0"
pydantic = "1.10.12"
starlette = "^0.37.2"
typing-extensions = "^4.11.0"
uvicorn = "^0.29.0"
docx2txt = "^0.8"
colorlog = "^6.8.2"
prisma = "0.9.1"
pytest = "^8.2.1"
python-multipart = "^0.0.9"
config = "^0.5.1"
textblob = "^0.18.0.post0"
rich = "^13.7.1"
requests = "^2.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
